# Celerity3D

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  configure.sh  run.sh
assets/mesh/: bottles.mtl  corgi.mtl  cube.mtl  gun.mtl
assets/shaders/: ascii.comp  color.frag  color.vert  light.frag  light.vert  screen.frag  screen.vert  shader.frag  shader.vert  shadow.frag  shadow.geom  shadow.vert  skybox.frag  skybox.vert
src/: Application.cpp  Application.h  Camera.cpp  Camera.h  Component.h  EventHandler.cpp  EventHandler.h  Input.cpp  Input.h  World.cpp  World.h  log.cpp  log.h  main.cpp  test.cpp  util.cpp  util.h  window.cpp  window.h
src/graphics/: BufferLayout.cpp  BufferLayout.h  Cube.cpp  Cube.h  CubeTexture.cpp  CubeTexture.h  Framebuffer.cpp  Framebuffer.h  IndexBuffer.cpp  IndexBuffer.h  LightSource.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Renderable.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TriangularPrism.cpp  TriangularPrism.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/graphics/object/: Mesh.cpp  Mesh.h  Object.cpp  Object.h
src/graphics/object/primitive/: Cube.cpp  Cube.h  Primitive.h  Square.cpp  Square.h
src/physx/: PhysXUtil.h  Physics.cpp  Physics.h  PhysicsMaterial.h
src/sample/: MoveComponent.cpp  MoveComponent.h
